# superSTR

./: Dockerfile  README.md  environment.yml
C/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  defs.h  factorizeforGDR.c  finalstageforGDR.c  findReps.c  kmp.c  main.c  mainRepeats.c  mainsearchforGDR.c  mreps.c  printOutput.c  searchforHeadGDR.c  superstr
C/Cmakes/: Findhtslib.cmake
Python/: multiparse.py  outliers.py  screen.py  simulation.py  visualise.py
docs/: ACKNOWLEDGEMENTS.md  EXAMPLE.md  INSTALL.md  OUTLIERS.md  POSTPROC.md  PROCESSING.md  SCREENING.md  SIMULATION.md  VISUALISATION.md
examples/: install_script.sh
examples/files/: SRP168964_accessions.txt  SRP168964_manifest_template.txt
licenses/: ARCH_LICENSE.md
